Replace Amazon login with Facebook login

--- a/day9.html
+++ b/day9.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <table align="center" cellpadding="10" cellspacing="10">
-        <h2><tr><center>amazon login</center></tr></h2>
+        <h2><tr><center>Facebook login</center></tr></h2>
         <tr>
             <td>
-<img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon Logo" width="150"><br>
-<marquee><i>"exclusive offeres 50% discount on on electronic products happy shopping every one"</i></marquee>
+<img src=https://img.freepik.com/premium-psd/facebook-logo-blue-circle_705838-12823.jpg?semt=ais_hybrid&w=740&q=80 alt="FacebookLogo" width="150"><br>
+<marquee><i>"Keep shining, the world needs your light."</i></marquee>
                   </td>
         </tr>
     <form>
@@ -29,4 +29,5 @@
     </form>
     </table>
 </body>
+
 </html>
