--- a/marks1.html
+++ b/marks1.html
@@ -20,7 +20,7 @@
               <tr>
                 <td width="120" valign="top">
                     <b> TS-EE 433268</b>
-                  <img src="C:\Users\bachu\OneDrive\画像\Screenshots 1\WhatsApp Image 2025-11-20 at 21.58.05_e877ae7d.jpg" alt="QR/emblem" width="110" height="110" />
+                  <img src="WhatsApp Image 2025-11-20 at 21.58.05_e877ae7d.jpg" alt="QR/emblem" width="110" height="110" />
                 </td>
 
                 <td align="center" valign="middle">
@@ -33,7 +33,7 @@
 
                 <td width="120" align="center" valign="top">
                   
-                  <img src="C:\Users\bachu\OneDrive\画像\Screenshots 1\WhatsApp Image 2025-11-20 at 22.00.38_c7b18ece.jpg" alt="Student Photo" width="100" height="120" />
+                  <img src="WhatsApp Image 2025-11-20 at 22.00.38_c7b18ece.jpg" alt="Student Photo" width="100" height="120" />
                    <div><b>Aadhaar No. 404755442852</b></div>
                 </td>
               </tr>
